--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "25.0.3",
+    "@types/react": "18.3.27",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.9.3"
   }
 }
