--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.7",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
