--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # NEXT_PUBLIC_API_URL=https://casemandu-api.casemandu.com.np
-NEXT_PUBLIC_API_URL=https://server.casemandu.com.np
+# NEXT_PUBLIC_API_URL=https://server.casemandu.com.np
+NEXT_PUBLIC_API_URL=https://casemandu-api.onrender.com
 # NEXT_PUBLIC_API_URL=http://localhost:5000
 # NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL=https://casemandu.com.np
