--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "react-player": "^3.4.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
